--- a/About.html
+++ b/About.html
@@ -9,53 +9,58 @@
 </style>
 <link rel="stylesheet" href="about.css">
 <body>
-    <nav style="display: flex; justify-content: space-between; background-color: black;" >
-        <h1 style="color: white;"> Grandcoffee</h1>
-        <div style="display: flex; text-decoration: none;">
-            <a style="margin:10px;" href="assigmet.html" target="_blank" id="home"> Home</a>
-            <a style="margin:10px;" href="About.html" target="_blank" > About Us</a>
-            <a style="margin:10px;" href="Gallery.html" target="_blank"> Gallery</a>
-            <a style="margin:10px;" href="servicies.html" target="_blank"> Services</a>
-            <a style="margin:10px;" href="contacts.html" target="_blank"> Contact Us</a>
+    <nav style="display: flex; justify-content: space-between; background-color: black; height: 90px; text-align: center;" >
+        <h1 style="color: white; font-size: 40px;  padding-top: 25px; padding-left: 20px;"> Grandcoffee        </h1>
+        <div style="display: flex; text-align: center; padding-top: 25px; padding-right: 20px;">
+            <a style="margin:10px; text-decoration: none; color: tomato;" href="assigmet.html" target="_blank" id="hom"> Home</a>
+            <a style="margin:10px; text-decoration: none; color: white;" href="About.html" target="_blank"  id="home"> About Us</a>
+            <a style="margin:10px; text-decoration: none; color: white;" href="Gallery.html" target="_blank"  id="home"> Gallery</a>
+            <a style="margin:10px; text-decoration: none; color: white;" href="servicies.html" target="_blank"  id="home"> Services</a>
+            <a style="margin:10px; text-decoration: none; color: white;" href="contacts.html" target="_blank"  id="home"> Contact Us</a>
         </div>
     </nav>
     <div style="display: flex; margin: 100px;">
        <div>
-        <H1 style="color: peachpuff;">About us</H1>
+        <H1 style="color: peachpuff; font-size: 50px;">About us</H1> <br> <br>
         <p> full cleaning and house keeping services for companies and households</p>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius rem in eaque reiciendis eum fugiat error officiis? Quia voluptatem aspernatur suscipit laudantium nihil ipsam expedita at. Voluptatem, perferendis rem.</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius rem in eaque reiciendis eum fugiat error officiis? Quia voluptatem aspernatur suscipit laudantium nihil ipsam expedita at. Voluptatem, perferendis rem.</p> <br> <br>
         <button>Read more</button> 
     </div>
-    <img src="Images2/about-img.png" alt="" height="500px" width="500px " >
+    <img src="images/about-img.png" alt="" height="500px" width="500px " >
     </div>
-    <footer style="padding-top: 20px; padding-bottom: 20px; color: white;">
-        < <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
+    <footer style="color: white;" class="devc">
+        <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
         <ul>
             <h1>About</h1>
-            <li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</li>
+            <li>consectetur adipiscing elit, sed do eiusmod <br> tempor incididunt ut labore et dolore magna <br> aliqua. Ut enim ad minim veniam, quis <br> nostrud exercitation u</li>
         </ul>   
         <ul class="seeerd">
             <h1>Menu</h1>
-            <li> <a href="assigmet.html"> Home</a></li>
-            <li> <a href="About.html"> About</a></li>
-            <li> <a href="Gallery.html"> Gallery</a></li>
-            <li> <a href="servicies.html"> Services</a></li>
-            <li> <a href="contacts.html"> Contact Us</a></li>
+            <li> <a href="assigmet.html " style="list-style:none; text-decoration: none; color: white;" class="hi"> Home</a></li>
+            <li> <a href="About.html" class="hi"> About</a></li>
+            <li> <a href="Gallery.html" class="hi"> Gallery</a></li>
+            <li> <a href="servicies.html" class="hi"> Services</a></li>
+            <li> <a href="contacts.html" class="hi"> Contact Us</a></li>
         </ul>
         <Ul>
             <h1>Useful Link</h1>
             <li>Adipiscing</li>
             <li>Elit, sed do</li>
-            <li>Eiusmod</li>
+            <li>Eiusm</li>
             <li>Tempor</li>
             <li>incididunt</li>
         </Ul>
         <ul>
             <h1>Contact Us</h1>
-            <li> <a href="assigmet.html">Email : demo@gmail.com</li></a>  </li> 
-            <li><a href="assigmet.html"> Call : +01 1234567890</a></li>
-            <li><a href="assigmet.html">Address : Loram Ipusm</a></li> 
+            <li class="hii" style="list-style: none; text-decoration: none; color: green;"> <a href="assigmet.html">Email : demo@gmail .com</li></a>  </li> 
+            <li class="hi"><a href="assigmet.html"> Call : +01 1234567890</a></li>
+            <li class="hi"><a href="assigmet.html">Address : Loram Ipusm</a></li> 
         </ul>
-      </footer> 
+       
+       
+      </footer> <br>
+       <div>
+            <p style="text-align: center;">2020 All Rights Reserved. Design by Free html Templates</p>
+        </div>
 </body>
 </html>
