--- a/Gallery.html
+++ b/Gallery.html
@@ -18,58 +18,60 @@
     }
 </style>
 <body>
-    <nav style="display: flex; justify-content: space-between; background-color: black;" >
-        <h1 style="color: white;"> Grandcoffee</h1>
-        <div style="display: flex; text-decoration: none;">
-            <a style="margin:10px;" href="assigmet.html" target="_blank" id="home"> Home</a>
-            <a style="margin:10px;" href="About.html" target="_blank" > About Us</a>
-            <a style="margin:10px;" href="Gallery.html" target="_blank"> Gallery</a>
-            <a style="margin:10px;" href="servicies.html" target="_blank"> Services</a>
-            <a style="margin:10px;" href="contacts.html" target="_blank"> Contact Us</a>
-        </div>
-    </nav>
-    <h1 style="text-align: center; color: tomato;">Our Gallery</h1>
-    <P style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptas reprehenderit distinctio ipsa fuga? Obcaecati cumque dignissimos ex? Quos eaque perferendis corrupti atque iure? Rerum maiores labore eos quod reprehenderit!</P>
-    <div id="Gallery">
-        <img src="Images2/img-1.png" alt="" srcset="">
-        <img src="Images2/img-2.png" alt="" srcset="">
-        <img src="Images2/img-3.png" alt="" srcset="">
-        <img src="Images2/img-4.png" alt="" srcset="">
-        <img src="Images2/img-5.png" alt="" srcset="">
-        <img src="Images2/img-6.png" alt="" srcset="">
-        <img src="Images2/img-7.png" alt="" srcset="">
-        <img src="Images2/img-8.png" alt="" srcset="">
-        <img src="Images2/img-9.png" alt="" srcset="">
+    <nav style="display: flex; justify-content: space-between; background-color: black; height: 90px;" >
+        <h1 style="color: white; color: white; font-size: 40px;  padding-top: 25px; padding-left: 20px;"> Grandcoffee</h1>
+        <div style="display: flex; text-decoration: none; display: flex; text-align: center; padding-top: 25px; padding-right: 20px;">
+            <a style="margin:10px; color: tomato; text-decoration: none;" href="assigmet.html" target="_blank" > Home</a>
+            <a style="margin:10px;" href="About.html" target="_blank" id="home"> About Us</a>
+            <a style="margin:10px;" href="Gallery.html" target="_blank" id="home"> Gallery</a>
+            <a style="margin:10px;" href="servicies.html" target="_blank" id="home"> Services</a>
+            <a style="margin:10px;" href="contacts.html" target="_blank" id="home"> Contact Us</a>
+        </div> 
+    </nav> <br> <br> <br> <br>
+    <h1 style="text-align: center; color: tomato; font-size: 40px;">Our Gallery</h1> <br>
+    <P style="text-align: center;">Lorem Ipsum is simply dummy text of printing typesetting ststry lorem Ipsum the industry'ndard dummy text ever since of the 1500s, when an unknown printer took a <br> galley of type and scra make a type specimen book. It has</P> <br>
+    <div id="Gallery" style="margin: auto; margin-left: auto; margin-right: auto;">
+        <img src="images/img-1.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-2.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-3.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-4.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-5.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-6.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-7.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-8.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <img src="images/img-9.png" alt="" srcset="" style=" margin-left: auto; margin-right: auto;">
+        <button> See more</button>
     </div>
-    <button style="text-align: center;"> See more</button>
+    
     <footer style="padding-top: 20px; padding-bottom: 20px;">
-        < <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
-        <ul>
+        <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
+        <ul style="list-style: none;">
             <h1>About</h1>
-            <li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</li>
+            <li>consectetur adipiscing elit, sed do eiusmod <br> tempor incididunt ut labore et dolore magna  <br> aliqua. Ut enim ad minim veniam, quis <br> nostrud exercitation u</li>
         </ul>   
-        <ul>
+        <ul >
             <h1>Menu</h1>
-            <li> <a href="assigmet.html"> Home</a></li>
-            <li> <a href="About.html"> About</a></li>
-            <li> <a href="Gallery.html"> Gallery</a></li>
-            <li> <a href="servicies.html"> Services</a></li>
-            <li> <a href="contacts.html"> Contact Us</a></li>
+            <li id="hom"> <a href="assigmet.html"> Home</a></li>
+            <li id="hom"> <a href="About.html"> About</a></li>
+            <li id="hom"> <a href="Gallery.html"> Gallery</a></li>
+            <li id="hom"> <a href="servicies.html"> Services</a></li>
+            <li id="hom"> <a href="contacts.html"> Contact Us</a></li>
         </ul>
         <Ul>
-            <h1>Useful Link</h1>
-            <li>Adipiscing</li>
-            <li>Elit, sed do</li>
+            <h1 >Useful Link</h1>
+            <li >Adipiscing</li>
+            <li >Elit, sed do</li>
             <li>Eiusmod</li>
             <li>Tempor</li>
             <li>incididunt</li>
         </Ul>
         <ul>
-            <h1>Contact Us</h1>
-            <li> <a href="assigmet.html">Email : demo@gmail.com</li></a>  </li> 
-            <li><a href="assigmet.html"> Call : +01 1234567890</a></li>
-            <li><a href="assigmet.html">Address : Loram Ipusm</a></li> 
+            <h1 id="hom" style="text-decoration: none; color: white;">Contact Us</h1>
+            <li id="hom"> <a href="#">Email : demo@gmail.com</li></a>  </li> 
+            <li id="hom"><a href="#"> Call : +01 1234567890</a></li>
+            <li id="hom"><a href="#">Address : Loram Ipusm</a></li> 
         </ul>
-      </footer> 
+    </footer> 
+    <footer style="text-align: center;">2020 All Rights Reserved. Design by Free html Templates</footer>
 </body>
 </html>
