--- a/contacts.html
+++ b/contacts.html
@@ -6,49 +6,58 @@
     <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
 </head>
-<body background="Images2/img-9.png" style="background-repeat: no-repeat; background-size: cover; text-align: center;">
-    <nav style="display: flex; justify-content: space-between; background-color: black;" >
+<body >
+    <nav style="display: flex; justify-content: space-between; background-color: black;"  class="den">
         <h1 style="color: white;"> Grandcoffee</h1>
         <div style="display: flex; text-decoration: none;">
-            <a style="margin:10px;" href="assigmet.html" target="_blank" id="home"> Home</a>
-            <a style="margin:10px;" href="About.html" target="_blank" > About Us</a>
-            <a style="margin:10px;" href="Gallery.html" target="_blank"> Gallery</a>
-            <a style="margin:10px;" href="servicies.html" target="_blank"> Services</a>
-            <a style="margin:10px;" href="contacts.html" target="_blank"> Contact Us</a>
+            <a style="margin:10px;" href="assigmet.html" target="_blank" class="home"> Home</a>
+            <a style="margin:10px;" href="About.html" target="_blank" class="About" > About Us</a>
+            <a style="margin:10px;" href="Gallery.html" target="_blank" class="Gallery"> Gallery</a>
+            <a style="margin:10px;" href="servicies.html" target="_blank" class="servicies"> Services</a>
+            <a style="margin:10px;" href="contacts.html" target="_blank" class="center"> Contact Us</a>
+        </div> 
+    </nav> <br> <br> <br>
+    <div style="display: flex;" class="cde"> 
+        <div>
+            <input type="text" placeholder="Name" class="dan" style="margin-right: 50px;"> <br> <br>
+            <input type="text" placeholder="Email" class="dan"> <br> <br>
+            <input type="text" placeholder="Phone number" class="dan" > <br> <br>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message" class="ttrey"> Message</textarea> <br> <br>
+            <button> Send</button>
         </div>
-    </nav>
-    <input type="text" placeholder="Name"> <br> <br>
-    <input type="text" placeholder="Email"> <br> <br>
-    <input type="text" placeholder="Phone number"> <br> <br>
-    <textarea name="" id="" cols="30" rows="10" placeholder="Message" class="ttrey"></textarea> <br> <br>
-    <button> Send</button>
+    
+        <div class="dzd" >
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1009058.7099090726!2d6.5924240938673435!3d8.913429307094376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e6157ce3eeda9%3A0x32af1c368be32dfc!2sFederal%20Capital%20Territory!5e0!3m2!1sen!2sng!4v1723466308128!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+    
     <footer style="padding-top: 20px; padding-bottom: 20px;">
-        < <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
+        <div style="display: flex; justify-content: space-between; background-color: black; color: white;">
         <ul>
             <h1>About</h1>
-            <li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</li>
+            <li>consectetur adipiscing elit, sed do eiusmod <br> tempor incididunt ut labore et dolore magna <br> aliqua. Ut enim ad minim veniam, quis <br> nostrud exercitation u</li>
         </ul>   
         <ul>
             <h1>Menu</h1>
-            <li> <a href="assigmet.html"> Home</a></li>
-            <li> <a href="About.html"> About</a></li>
-            <li> <a href="Gallery.html"> Gallery</a></li>
-            <li> <a href="servicies.html"> Services</a></li>
-            <li> <a href="contacts.html"> Contact Us</a></li>
+            <li style="list-style: none;"> <a href="assigmet.html" class="der"> Home</a></li>
+            <li style="list-style: none;"> <a href="About.html" class="der"> About</a></li>
+            <li style="list-style: none;"> <a href="Gallery.html" class="der"> Gallery</a></li>
+            <li style="list-style: none;"> <a href="servicies.html" class="der"> Services</a></li>
+            <li style="list-style: none;"> <a href="contacts.html" class="der"> Contact Us</a></li>
         </ul>
-        <Ul>
-            <h1>Useful Link</h1>
-            <li>Adipiscing</li>
-            <li>Elit, sed do</li>
-            <li>Eiusmod</li>
-            <li>Tempor</li>
-            <li>incididunt</li>
+        <Ul class="nder">
+            <h1 class="der" style="list-style: none;">Useful Link</h1>
+            <li class="der" style="list-style: none;">Adipiscing</li>
+            <li class="der" style="list-style: none;">Elit, sed do</li>
+            <li class="der" style="list-style: none;">Eiusmod</li>
+            <li class="der" style="list-style: none;">Tempor</li>
+            <li class="der" style="list-style: none;">incididunt</li>
         </Ul>
         <ul>
-            <h1>Contact Us</h1>
-            <li> <a href="assigmet.html">Email : demo@gmail.com</li></a>  </li> 
-            <li><a href="assigmet.html"> Call : +01 1234567890</a></li>
-            <li><a href="assigmet.html">Address : Loram Ipusm</a></li> 
+            <h1 class="dev">Contact Us</h1>
+            <li class="dev" style="list-style: none; text-decoration: none;"><a href="assigmet.html">Email : demo@gmail.com</li></a>  </li> 
+            <li class="dev" style="list-style: none;"><a href="assigmet.html"> Call : +01 1234567890</a></li>
+            <li class="dev" style="list-style: none;"><a href="assigmet.html">Address : Loram Ipusm</a></li> 
         </ul>
       </footer> 
 </body>
