--- a/new.html
+++ b/new.html
@@ -196,9 +196,11 @@
    </main>
    <footer style="padding-top: 20px; padding-bottom: 20px; background-color: black; color: white;">
      <div style="display: flex; justify-content: space-between;">
+        <div>
         <p> Home</p>
         <p> About</p>
         <p> Blog</p>
+        </div>
         <div>
             <p>Exelent</p>
             <p>Html Developer</p>
